fix word-wrapping problem in navigation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,6 +117,9 @@ body {
         display: block;
         position: absolute;
         left: -99999px; }
+        #sewchic_primary_menu li.menu-item ul.sub-menu li {
+          display: block;
+          white-space: nowrap; }
       #sewchic_primary_menu li.menu-item:hover {
         background: #eee; }
       #sewchic_primary_menu li.menu-item:hover a {
