--- a/assets/css/sass/_header_logo_nav.scss
+++ b/assets/css/sass/_header_logo_nav.scss
@@ -82,6 +82,10 @@
                 display:block;
                 position:absolute;
                 left: -99999px;
+                li{
+                    display:block;
+                    white-space:nowrap;
+                }
             }
             &:hover{
                 background: #eee;
